# promptgen

./: .gitignore  Cargo.toml  README.md
client/: README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
client/apps/desktop/: README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
client/apps/desktop/src/: index.css  main.tsx
client/apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
client/apps/desktop/src-tauri/capabilities/: default.json
client/apps/desktop/src-tauri/src/: lib.rs  main.rs
client/apps/desktop/src/backend/: desktop.tsx
promptgen-cli/: Cargo.toml  README.md  example.yml
promptgen-cli/src/: main.rs
promptgen-core/: Cargo.toml
promptgen-core/src/: ast.rs  eval.rs  io.rs  lib.rs  library.rs  parser.rs  search.rs  span.rs  wasm.rs  workspace.rs
promptgen-core/tests/: determinism.rs  grammar.rs  library_structure.rs  search.rs  slot_dsl.rs  templates.rs
promptgen-core/tests/common/: mod.rs
promptgen-ui/: Cargo.toml  README.md  index.html
promptgen-ui/assets/: sw.js
promptgen-ui/src/: app.rs  highlighting.rs  lib.rs  main.rs  state.rs  theme.rs
promptgen-ui/src/components/: autocomplete.rs  editor.rs  focusable_frame.rs  group_editor.rs  mod.rs  preview.rs  prompt_editor.rs  sidebar.rs  slots.rs  template_editor.rs  variable_editor.rs
promptgen-ui/src/storage/: mod.rs  native.rs
xtask/: Cargo.toml
xtask/src/: main.rs
