[package]
name = "promptgen-cli"
version = "0.1.0"
edition = "2024"
description = "CLI for PromptGen - a modular prompt system for generative AI"

[[bin]]
name = "promptgen"
path = "src/main.rs"

[dependencies]
promptgen-core = { path = "../promptgen-core", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"