[package]
name = "promptgen-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
serde = ["dep:serde", "dep:serde_yaml_ng"]
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:console_error_panic_hook", "dep:getrandom", "serde"]

[dependencies]
chumsky = "0.11.2"
fuzzy-matcher = "0.3"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_yaml_ng = { version = "0.10.0", optional = true }
thiserror = "2.0.17"
uuid = { version = "1.19", features = ["v4"] }

# WASM dependencies (optional, enabled by "wasm" feature)
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.3", features = ["wasm_js"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.19", features = ["v4", "js"] }

[dev-dependencies]
once_cell = "1.19"
tempfile = "3.20"
promptgen-core = { path = ".", features = ["serde"] }