[package]
name = "promptgen-core"
version = "0.1.0"
edition = "2024"

[features]
default = []
serde = ["dep:serde", "dep:serde_yaml_ng"]

[dependencies]
chumsky = "0.11.2"
cuid = "1.3.3"
fuzzy-matcher = "0.3"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_yaml_ng = { version = "0.10.0", optional = true }
thiserror = "2.0.17"

[dev-dependencies]
once_cell = "1.19"
tempfile = "3.20"
promptgen-core = { path = ".", features = ["serde"] }
