[package]
name = "promptgen-ui"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
promptgen-core = { path = "../promptgen-core", features = ["serde"] }

# UI Framework
egui = "0.33.0"
eframe = { version = "0.33.0", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers
    "default_fonts", # Embed the default egui fonts
    "glow",          # Use the glow rendering backend
    "persistence",   # Enable restoring app state when restarting the app
    "wayland",       # Linux Wayland support
    "x11",           # Linux X11 support
] }
egui_flex = "0.5"
catppuccin-egui = { version = "5", default-features = false, features = ["egui33"] }

# Logging
log = "0.4"

# Serialization (for app persistence)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
rfd = "0.16"
directories = "6"

# Web-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1", features = ["js"] }
