[package]
name = "promptgen-desktop"
version = "0.0.1"
description = "PromptGen Desktop Application"
authors = ["you"]
edition = "2021"

[lib]
name = "promptgen_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
promptgen-core = { path = "../../../../promptgen-core", features = ["serde"] }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "6.0.0"
